feature: improve сomprehensibility of readme.md